[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/menu_principal/Boton creditos.png" type="Texture" id=1]
[ext_resource path="res://assets/menu_principal/menu de inicio.png" type="Texture" id=2]
[ext_resource path="res://assets/menu_principal/boton salir.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_principal/titulogame.png" type="Texture" id=4]
[ext_resource path="res://assets/menu_principal/boton jugar.png" type="Texture" id=5]
[ext_resource path="res://escenas/menu_principal/MenuPrincipal.gd" type="Script" id=6]

[node name="MenuPrincipal" type="Control"]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="CenterContainer"]
position = Vector2( 640.726, 360.368 )
scale = Vector2( 0.668, 0.668 )
texture = ExtResource( 2 )

[node name="Botones" type="VBoxContainer" parent="."]
margin_left = 722.0
margin_top = 258.0
margin_right = 1251.0
margin_bottom = 928.0
rect_scale = Vector2( 0.6, 0.6 )
custom_constants/separation = -40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="TextureButton" parent="Botones"]
margin_right = 529.0
margin_bottom = 250.0
texture_normal = ExtResource( 5 )

[node name="Creditos" type="TextureButton" parent="Botones"]
margin_top = 210.0
margin_right = 529.0
margin_bottom = 460.0
texture_normal = ExtResource( 1 )

[node name="Salir" type="TextureButton" parent="Botones"]
margin_top = 420.0
margin_right = 529.0
margin_bottom = 670.0
texture_normal = ExtResource( 3 )

[node name="Titulo" type="Sprite" parent="."]
position = Vector2( 906.433, 185.608 )
scale = Vector2( 0.705631, 0.705631 )
texture = ExtResource( 4 )
[connection signal="button_down" from="Botones/Jugar" to="." method="_on_Jugar_button_down"]
[connection signal="button_down" from="Botones/Creditos" to="." method="_on_Creditos_button_down"]
[connection signal="button_down" from="Botones/Salir" to="." method="_on_Salir_button_down"]
